# c-gsr

./: .gitignore  LICENSE  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac  gsr.pc.in
gsr/: gsr-data.h  gsr-gint64.c  gsr-gint64.h.in  gsr-resolve.c  gsr-resolve.h  gsr-symbol.c  gsr-symbol.h  gsr-type.c  gsr-type.h  gsr-value.c  gsr-value.h  gsr.c  gsr.h
